--- a/index.css
+++ b/index.css
@@ -1,7 +1,29 @@
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #1e272e;
+    color: #d2dae2;
+  }
+
+  .container input {
+    background-color: #1e272e;
+    color: #d2dae2;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: #f5f5f5;
+    color: #1e272e;
+  }
+
+  .container input {
+    background-color: #f5f5f5;
+    color: #1e272e;
+  }
+}
+
 body {
-  background-color: #1e272e;
-  color: #d2dae2;
-  font-family: sans-serif;
+  font-family: "Roboto Serif", serif;
   margin: 0;
 }
 
@@ -16,6 +38,14 @@ h1 {
 
 hr {
   width: 95%;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--background);
+  padding: 20px 10px;
 }
 
 .Wordle-Game {
@@ -36,7 +66,6 @@ hr {
 .container input {
   border: none;
   background-color: transparent;
-  color: #d2dae2;
   font-size: 2em;
   font-weight: bold;
   text-align: center;
@@ -48,15 +77,6 @@ hr {
 
 .container input:focus::placeholder {
   color: transparent;
-}
-
-.container button {
-  margin-top: 10px;
-  background-color: transparent;
-  color: #d2dae2;
-  font-size: 2em;
-  border-color: #808e9b;
-  cursor: pointer;
 }
 
 .Wordle-Game div {
@@ -89,8 +109,10 @@ hr {
 .buttons button {
   margin-right: 10px;
   background-color: transparent;
-  color: #d2dae2;
+  color: var(--text);
   font-size: 2em;
+  background-color: var(--background);
   border-color: #808e9b;
   cursor: pointer;
+  margin-top: 10px;
 }
